discussion/kv_engine/163012/163012_rev19_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Implicit compaction support for NexusKVStore

We want to make all comparisons possible, but without limiting the set
of features that the underlying KVStores support. Magma implicit
compaction will potentially purge items that the other KVStore has not
yet purged on a background thread. We don't want to disable it as it is
instrumental to the way in which magma buckets work, so we track a
purgeSeqno which tells us the highest seqno purged (any seqno lower may
have been purged and the result of any such comparison may be
different). We track only one purge seqno here (the highest seqno
purged by any KVStore) rather than one per KVStore as the comparison is
only guaranteed to be valid if the seqno is higher than the purge seqno
of both KVStores.

Change-Id: I965b1323e7a8d85cb3f4d70ad7698318503f33c7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-18 11:01:00.000000000
Message: 
Uploaded patch set 19.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-18 11:31:03.000000000
Message: 
Patch Set 19: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16694/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35537/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.h:278:17:
error: no template named "NonNegativeCounter" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35537/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41847/ : FAILURE

Failure of GoogleTest "PersistentAndEphemeral/StreamTest.BackfillOnly/persistent_magma":

<pre>
[ RUN      ] PersistentAndEphemeral/StreamTest.BackfillOnly/persistent_magma
..\kv_engine\engines\ep\tests\module_tests\dcp_stream_test.cc(805): error: Expected: (numItems) >= (*stream->getNumBackfillItemsRemaining()), actual: 3 vs 6
[  FAILED  ] PersistentAndEphemeral/StreamTest.BackfillOnly/persistent_magma, where GetParam() = "persistent_magma" (125 ms)
PersistentAndEphemeral/StreamTest.BackfillOnly/persistent_magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41847/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14061/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.h:278:17: error: no template named "NonNegativeCounter" in namespace "cb" [clang-diagnostic-error]
    mutable cb::NonNegativeCounter<uint64_t> skippedChecksDueToPurging;
                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: no matching constructor for initialization of "NexusKVStoreTransactionContext" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2389:21: note: in instantiation of function template specialization "std::make_unique<NexusKVStoreTransactionContext, NexusKVStore &, Vbid &>" requested here
    auto ctx = std::make_unique<NexusKVStoreTransactionContext>(*this, vbid);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore-transaction-context.h:19:5: note: candidate constructor not viable: no known conversion from "NexusKVStore" to "KVStoreIface &" for 1st argument
    NexusKVStoreTransactionContext(KVStoreIface& kvstore, Vbid vbid)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore-transaction-context.h:18:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
struct NexusKVStoreTransactionContext : public TransactionContext {
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14061/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.h:278:17:
error: no template named "NonNegativeCounter" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14061/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12869/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/nexus_kvstore_test.cc b/engines/ep/tests/module_tests/nexus_kvstore_test.cc
index 3f8e4a8a1..020f60f71 100644
--- a/engines/ep/tests/module_tests/nexus_kvstore_test.cc
+++ b/engines/ep/tests/module_tests/nexus_kvstore_test.cc
@@ -12,15 +12,15 @@
 
 #include &quot;collections/collections_test_helpers.h&quot;
 
-#include &quot;kv_bucket.h&quot;
-#include &quot;test_helpers.h&quot;
-#include &quot;test_manifest.h&quot;
-#include &quot;vbucket.h&quot;
 #include &quot;../mock/mock_ep_bucket.h&quot;
 #include &quot;../mock/mock_synchronous_ep_engine.h&quot;
 #include &quot;collections/collections_test_helpers.h&quot;
 #include &quot;item.h&quot;
+#include &quot;kv_bucket.h&quot;
+#include &quot;test_helpers.h&quot;
+#include &quot;test_manifest.h&quot;
 #include &quot;tests/module_tests/thread_gate.h&quot;
+#include &quot;vbucket.h&quot;
 #include &quot;vbucket_bgfetch_item.h&quot;
 #include &quot;vbucket_state.h&quot;
 
@@ -328,11 +328,10 @@ TEST_P(NexusKVStoreTest, DropCollectionMidFlush) {
 
     // Previously the post commit checks would fail to find the dropped
     // collection in the manifest but assumed it was there and segfaulted
-    auto *kvstore = store-&gt;getRWUnderlying(vbid);
-    kvstore-&gt;setPostFlushHook([this, &amp;vb, &amp;cm]()
-                              {
-                                  vb-&gt;updateFromManifest(makeManifest(cm.remove(CollectionEntry::meat)));
-                              });
+    auto* kvstore = store-&gt;getRWUnderlying(vbid);
+    kvstore-&gt;setPostFlushHook([this, &amp;vb, &amp;cm]() {
+        vb-&gt;updateFromManifest(makeManifest(cm.remove(CollectionEntry::meat)));
+    });
 
     flushVBucketToDiskIfPersistent(vbid, 1);
 }

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12869/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14855/ : FAILURE

Failure of GoogleTest "ExecutorPoolTest/0.ScheduleCancelx2":

<pre>
[ RUN      ] ExecutorPoolTest/0.ScheduleCancelx2
[2021-11-18T11:15:18.310Z] ../kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:695: Failure
[2021-11-18T11:15:18.310Z] Value of: this->pool->cancel(taskId, false)
[2021-11-18T11:15:18.310Z]   Actual: false
[2021-11-18T11:15:18.310Z] Expected: true
[2021-11-18T11:15:18.310Z] [  FAILED  ] ExecutorPoolTest/0.ScheduleCancelx2, where TypeParam = TestExecutorPool (0 ms)
ExecutorPoolTest/0.ScheduleCancelx2
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14855/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24051/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24051/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3694/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15684/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15966/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3770/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
